--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "bootstrap": "^3.4.1",
     "hammerjs": "^2.0.8",
+    "ngx-quill": "^7.3.0",
     "paper-css": "^0.4.1",
+    "quill": "^1.3.6",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
