--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.2.0",
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
+    "@angular/elements": "^8.2.5",
     "@angular/forms": "~8.2.0",
     "@angular/material": "^8.1.4",
     "@angular/platform-browser": "~8.2.0",
@@ -25,10 +26,11 @@
     "hammerjs": "^2.0.8",
     "ngx-quill": "^7.3.0",
     "paper-css": "^0.4.1",
-    "quill": "^1.3.6",
+    "quill": "^1.3.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "document-register-element": "^1.7.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.1",
