--- a/package.json
+++ b/package.json
@@ -12,20 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.0.6",
-    "@angular/cdk": "^8.2.3",
+    "@angular/cdk": "^9.1.3",
     "@angular/common": "^9.0.6",
     "@angular/compiler": "^9.0.6",
     "@angular/core": "^9.0.6",
     "@angular/elements": "^9.0.6",
     "@angular/forms": "^9.0.6",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^9.1.3",
     "@angular/platform-browser": "^9.0.6",
     "@angular/platform-browser-dynamic": "^9.0.6",
     "@angular/router": "^9.0.6",
+    "@swimlane/ngx-datatable": "^16.0.3",
     "bootstrap": "^3.4.1",
     "document-register-element": "^1.7.2",
-    "hammerjs": "^2.0.8",
+    "install": "^0.13.0",
+    "ngx-nested-data-table": "0.0.8",
     "ngx-quill": "^7.3.12",
+    "npm": "^6.14.3",
     "paper-css": "^0.4.1",
     "quill": "^1.3.7",
     "rxjs": "^6.5.4",
@@ -43,7 +46,7 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "^2.0.1",
