--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "@angular/platform-browser": "^9.0.7",
     "@angular/platform-browser-dynamic": "^9.0.7",
     "@angular/router": "^9.0.7",
-    "apollo-angular": "^1.8.0",
-    "apollo-angular-link-http": "^1.9.0",
-    "apollo-cache-inmemory": "^1.6.0",
-    "apollo-client": "^2.6.0",
-    "apollo-link": "^1.2.11",
+    "apollo-angular": "^1.9.1",
+    "apollo-angular-link-http": "^1.10.0",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.14",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.3",
     "bootstrap": "^3.4.1",
     "document-register-element": "^1.7.2",
+    "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "install": "^0.13.0",
     "ngx-nested-data-table": "0.0.8",
@@ -38,6 +41,7 @@
     "paper-css": "^0.4.1",
     "quill": "^1.3.7",
     "rxjs": "^6.5.4",
+    "subscriptions-transport-ws": "^0.9.16",
     "tslib": "^1.11.1",
     "zone.js": "^0.10.3"
   },
