--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,6 @@
 /*
  * This file is used by CodeMix's Build Pipeline feature to provide fully compliant
- * validation using the TypeScript compiler (tsc) configured at the newProject level. It has been
+ * validation using the TypeScript compiler (tsc) configured at the new-project level. It has been
  * generated to facilitate usage.  To learn more about the tasks.json format,
  * see: https://www.genuitec.com/go/about-tasks.json
  */
