--- a/package.json
+++ b/package.json
@@ -35,9 +35,8 @@
     "graphql": "^14.6.0",
     "graphql-tag": "^2.10.3",
     "install": "^0.13.0",
-    "ngx-nested-data-table": "0.0.8",
     "ngx-quill": "^7.3.12",
-    "npm": "^6.14.3",
+    "npm": "^6.14.6",
     "paper-css": "^0.4.1",
     "quill": "^1.3.7",
     "rxjs": "^6.5.4",
@@ -46,14 +45,14 @@
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.7",
+    "@angular-devkit/build-angular": "^0.1000.3",
     "@angular/cli": "^9.0.7",
     "@angular/compiler-cli": "^9.0.7",
     "@angular/language-service": "^9.0.7",
-    "@graphql-codegen/cli": "1.13.3",
-    "@graphql-codegen/typescript": "1.13.3",
-    "@graphql-codegen/typescript-apollo-angular": "1.13.3",
-    "@graphql-codegen/typescript-operations": "1.13.3",
+    "@graphql-codegen/cli": "^1.17.0",
+    "@graphql-codegen/typescript": "^1.17.0",
+    "@graphql-codegen/typescript-apollo-angular": "^1.17.0",
+    "@graphql-codegen/typescript-operations": "^1.17.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.31",
@@ -61,12 +60,12 @@
     "codelyzer": "^5.1.2",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
+    "karma": "^5.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "protractor": "^5.4.3",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5"
